--- a/packages/storybook/.github/workflows/chromatic.yml
+++ b/packages/storybook/.github/workflows/chromatic.yml
@@ -11,14 +11,12 @@ jobs:
           fetch-depth: 0
       
       - name: Install dependencies
-        run: |
-          yarn install
-          cd packages/storybook
-          yarn install
+        run: npm install
         
       - name: Publish to Chromatic
         uses: chromaui/action@v1
         with:
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
-          workingDir: packages/storybook
+          # 👇 Chromatic will automatically determine which stories have changed
+          # and only run those tests. This is why we use `fetch-depth: 0` above.
           exitZeroOnChanges: true 
