--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -1,4 +1,4 @@
-name: 'Chromatic Deployment'
+name: 'Chromatic'
 
 on: push
 
@@ -6,19 +6,17 @@ jobs:
   chromatic-deployment:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
-          fetch-depth: 0
-      
+          fetch-depth: 0 # Required for Chromatic to work correctly
+
       - name: Install dependencies
-        run: |
-          yarn install
-          cd packages/storybook
-          yarn install
-        
+        run: yarn install --frozen-lockfile
+
       - name: Publish to Chromatic
         uses: chromaui/action@v1
         with:
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
-          workingDir: packages/storybook
-          exitZeroOnChanges: true 
+          # 👇 Chromatic-specific options
+          exitZeroOnChanges: true # Optional: prevent the workflow from failing when changes are detected
+          buildScriptName: build-storybook # Optional: the name of the build script in package.json 
