--- a/package.json
+++ b/package.json
@@ -1,19 +1,41 @@
 {
   "name": "judgedicev7",
+  "version": "0.1.0",
   "private": true,
-  "workspaces": [
-    "packages/*"
-  ],
   "scripts": {
-    "dev:website": "yarn workspace @judgedicev7/website dev",
-    "dev:storybook": "yarn workspace @judgedicev7/storybook storybook",
-    "build:website": "yarn workspace @judgedicev7/website build",
-    "build:storybook": "yarn workspace @judgedicev7/storybook build-storybook",
-    "test": "yarn workspaces run test",
-    "lint": "yarn workspaces run lint"
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
+  },
+  "dependencies": {
+    "next": "15.3.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "typescript": "^5.0.4",
-    "prettier": "^3.0.0"
+    "@chromatic-com/storybook": "^4.0.0",
+    "@eslint/eslintrc": "^3",
+    "@storybook/addon-a11y": "^9.0.6",
+    "@storybook/addon-docs": "^9.0.6",
+    "@storybook/addon-onboarding": "^9.0.6",
+    "@storybook/addon-vitest": "^9.0.6",
+    "@storybook/nextjs-vite": "9.0.6",
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@vitest/browser": "^3.2.2",
+    "@vitest/coverage-v8": "^3.2.2",
+    "eslint": "^9",
+    "eslint-config-next": "15.3.3",
+    "eslint-plugin-storybook": "^9.0.6",
+    "playwright": "^1.52.0",
+    "storybook": "^9.0.6",
+    "tailwindcss": "^4",
+    "typescript": "^5",
+    "vitest": "^3.2.2"
   }
-} 
+}
