--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
   },
   "dependencies": {
     "next": "15.3.3",
@@ -29,6 +29,7 @@
     "@types/react-dom": "^19",
     "@vitest/browser": "^3.2.2",
     "@vitest/coverage-v8": "^3.2.2",
+    "chromatic": "^12.1.1",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "eslint-plugin-storybook": "^9.0.6",
