--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "prepare": "yarn build:lib"
   },
   "dependencies": {
-    "judgedicev7": "file:../judgedicev7-storybook",
+    //"judgedicev7": "file:../judgedicev7-storybook",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
